Moving mask layers does not invalidate mask drawing in the movie clip editor #40412

Closed
opened 2014-05-28 19:57:33 +02:00 by Thomas Beck · 5 comments
Member

Tried this with recent trunk and 2.70a, I think it's broken since ever.
Open this MaskDeleteLayerBug.blend blend and try move the mask layers. You should see that different masks are being subtracted as the order changes - but nothing will happen.

I'm just adding it here cause I'd like to have a test case for the fix I will commit soon. Will investigate it now ... should not be more then a missing notifier...

Tried this with recent trunk and 2.70a, I think it's broken since ever. Open this [MaskDeleteLayerBug.blend](https://archive.blender.org/developer/F91747/MaskDeleteLayerBug.blend) blend and try move the mask layers. You should see that different masks are being subtracted as the order changes - but nothing will happen. I'm just adding it here cause I'd like to have a test case for the fix I will commit soon. Will investigate it now ... should not be more then a missing notifier...
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Thomas Beck self-assigned this 2014-05-28 19:57:33 +02:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions

This issue was referenced by 11a156255d

This issue was referenced by 11a156255dfadc5ab54d9303f919d5ff217aabac
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit 11a156255d.

Closed by commit 11a156255d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40412
No description provided.