Fix T40412: Moving mask layers does not invalidate mask drawing in the movie clip editor

Issue was caused by a missing WM_event_add_notifier(..) in the mask_layer_move_exec() function...